# snowflake-cortex-translate

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  branch_protection.json  patch.diff  pyproject.toml
.Jules/: palette.md
.clusterfuzzlite/: Dockerfile  build.sh  fuzzer.py  requirements-fuzz.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cflite_pr.yml  ci.yml  codeql.yml  dependency-review.yml  pages.yml  release-evidence-backfill.yml  release.yml  scorecard.yml
.jules/: bolt.md  sentinel.md
config/: connections.toml.example
docs/: release-publishing.md
docs/plans/: 2026-04-08-snowflake-cortex-translation-design.md  2026-04-08-snowflake-cortex-translation-implementation.md  2026-04-09-rest-api-publication-design.md  2026-04-09-rest-api-publication-implementation.md  2026-04-10-korean-pages-copy-cleanup-design.md
k8s/: deployment.yaml  service.yaml
site/: index.html  styles.css
skills/fix-linter-security-flaws/: SKILL.md
sql/: setup.sql  verify.sql
src/cortex_translate_service/: __init__.py  api.py  api.py.orig  bootstrap.py  cli.py  domain.py  service.py  snowflake_gateway.py
tests/: test_api.py  test_cli.py  test_domain.py  test_service.py  test_site_copy.py  test_snowflake_gateway.py  test_version_consistency.py  test_workflows.py
